welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:5: error: not found: value c
	c=0;
        ^golomb:7: error: not found: value c
		if (c!=i) {
                    ^golomb:9: error: not found: value c
		 c +=1;
                 ^